# ICMars

./: .gitignore  LICENSE  README.md  cleanup.sh  commands  get_marvelmind_port.sh  run.sh
arduino/turtle1/: turtle1.ino  turtle_grip.cpp  turtle_grip.h  turtle_light.cpp  turtle_light.h  turtle_motor.cpp  turtle_motor.h  turtle_odom.cpp  turtle_odom.h  turtle_sonar.cpp  turtle_sonar.h
src/icmars_onboard/: README.md
src/icmars_onboard/apriltags_ros/apriltags_ros/launch/: example.launch  new.launch
src/icmars_onboard/icmars_msgs/: CMakeLists.txt  package.xml
src/icmars_onboard/icmars_msgs/msg/: NamedImage.msg  TwistDuration.msg
src/icmars_onboard/icmars_onboard/: CMakeLists.txt  package.xml
src/icmars_onboard/icmars_onboard/action/: Move.action  Pickup.action
src/icmars_onboard/icmars_onboard/launch/: apriltags.launch  pose_from_vive.launch  rr.launch  smp.launch
src/icmars_onboard/icmars_onboard/scripts/: startup.sh
src/icmars_onboard/icmars_onboard/src/: cmd_node.cpp  drive_node.cpp  exec_node.cpp  image_node.cpp  mainRover2_cmd_node.cpp  mars_camera_node.cpp  pickup_controller.cpp  pickup_node.cpp  rr_motor_control_node.cpp
src/icmars_onboard/icmars_onboard/src/old/: cmd_node.old.cpp  drive_node.old.cpp  rr_cmd_node_old.cpp
src/icmars_onboard/marvel-ultrasonicGPS/: CMakeLists.txt  README.md  package.xml
src/icmars_onboard/marvel-ultrasonicGPS/launch/: calibrate_imu.launch  node.launch  old.node.launch
src/icmars_onboard/marvel-ultrasonicGPS/src/: hedge_rcv_bin.cpp  pose_node.cpp
src/icmars_onboard/usb_cam/launch/: usb_cam.launch
