<?xml version="1.0"?>
<package>
  <name>marvelmind_nav</name>
  <version>1.0.8</version>
  <description>Marvelmind local navigation system</description>

  <maintainer email="smoker77@gmail.com">smoker77</maintainer>

  <license>BSD</license>

  <url type="website">http://marvelmind.com</url>

  <author email="smoker77@gmail.com">smoker77</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
